--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,9 +1,9 @@
-name: Run Unit Tests on PR
+name: Run Unit Tests on Push
 
 on:
-  pull_request:
+  push:
     branches:
-      - main 
+      - main
 
 jobs:
   test:
