--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -16,10 +16,16 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 14 
+          node-version: 14
 
       - name: Install dependencies
         run: npm install
+
+      - name: Run ESLint
+        run: npm run lint # Replace with your actual ESLint command if it's different
+
+      - name: Run Prettier
+        run: npm run format
 
       - name: Run Unit Tests
         run: npm test
