Fixed eslint json

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,11 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	},
 	"plugins": ["react"],
 	"rules": {}
 }
