--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Run ESLint
-        run: npm run lint # Replace with your actual ESLint command if it's different
+        run: npm run lint
 
       - name: Run Prettier
         run: npm run format
