--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"build:qa": "env-cmd -f .env.qa react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"lint": "eslint . --fix --max-warnings=0",
+		"lint": "eslint . --fix",
 		"format": "prettier . --write",
 		"prepare": "husky install"
 	},
