--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
 	"env": {
 		"browser": true,
-		"es2021": true
+		"es2021": true,
+		"jest": true
 	},
 	"extends": ["standard", "plugin:react/recommended", "prettier"],
 	"parserOptions": {
@@ -13,6 +14,8 @@
 			"version": "detect"
 		}
 	},
-	"plugins": ["react"],
-	"rules": {}
+	"plugins": ["react", "jest"],
+	"rules": {
+		"jest/expect-expect": "error"
+	}
 }
